microc/tests/expected/err-funass1.uc.out
../examples/err-funass1.uc:[2:10]: semantic error: cannot assign to a function
      main = 5; // error: assignment to a function
           ^

1
